Fix source column - align the background to the left

--- a/client/style.scss
+++ b/client/style.scss
@@ -53,7 +53,6 @@
 
 	.payment-method__brand {
 		display: block;
-		margin: 0 auto;
 	}
 }
 
